# ecosystem

./: .gitmodules  CMakeLists.txt  README.md
include/: camera.h  circlemesh.h  grid.h  random.h  util.h  version.h
libs/: CMakeLists.txt
shaders/: shader.fs  shader.gs  shader.vs  triangle.vs
src/: camera.cpp  circlemesh.cpp  main.cpp  random.cpp
